Refactor database configuration to use environment variables
This commit modifies the database.go file to read connection parameters from
environment variables, which enables proper containerized deployment. Key changes:

- Added getEnv() helper function to read environment variables with fallbacks
- Updated DefaultDBConfig() to use environment variables instead of hardcoded values
- Added proper handling for DB_PORT as an integer value
- Maintained backward compatibility with default values for local development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,37 @@
 version: '3.8'
 
 services:
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: little-sun-backend
+    ports:
+      - "8080:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      - DB_HOST=postgres
+      - DB_USER=postgres
+      - DB_PASSWORD=password
+      - DB_NAME=userauth
+      - DB_PORT=5432
+    volumes:
+      - ./backend/pkg/configs:/app/pkg/configs
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: little-sun-frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    restart: unless-stopped
+
   postgres:
     image: postgres:14
     container_name: postgres-auth
@@ -12,12 +43,12 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
+
 volumes:
   postgres-data:
