--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,12 @@ COPY package*.json ./
 RUN npm ci
 
 COPY . ./
-RUN ng build
+
+RUN echo "environment contents:" && cat src/environments/environment.prod.ts
+
+RUN ng build -c production
+
 FROM nginx:stable AS final
-EXPOSE 80
+EXPOSE 4200
 COPY --from=build src/dist/angular-app/browser  /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
